[package]
name = "rustrument"
version = "0.1.0"
authors = ["YwLiu <itoar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "*"
num_enum = "*"
thiserror = "1.0"
bytes = "0.5"

[build-dependencies]
fastxdr = "1.0.2"