[package]
name = "rustrument"
version = "0.1.0"
authors = ["YwLiu <itoar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "*"
num_enum = "*"
thiserror = "*"
bytes = "*"
onc-rpc = "*"
rand = "*"
serde = { version = "^1", features = ["derive"] }
serde-xdr = "*"

[build-dependencies]
fastxdr = "*"
